add receiver to form and show

--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -3,5 +3,8 @@
     <strong>Amount in cents:</strong>
     <%= donation.amount_in_cents %>
   </p>
-
+  <p>
+    <strong>Receiver:</strong>
+    <%= link_to donation.receiver.name, donation.receiver %>
+  </p>
 </div>
